--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
   <header>
     <h1>О Нём</h1>
-    <p class="subtitle">Emissary of Storm</p>
+    <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона"</p>
     <nav>
       <ul>
         <li><a href="index.html">Главная</a></li>
@@ -27,10 +27,10 @@
   <main>
     <section class="intro">
       <p>
-        Мархосиас — демон четвёртого легиона ада, явившийся как оборотень с крыльями летучей мыши и сиянием боевого духа. 
-        Он является покровителем тех, кто ищет власть через трансформацию, борьбу и внутренний огонь.
+        Мархосиас — один из 72-х демонов "Гоэтии", первой книги "Малого Ключа Соломона". Имеет чин Маркиза. Предстаёт в образе огненного волка с грифоньими крыльями и стальным взглядом хищника, но также может являться в обличии оборотня.
+        Является покровителем тех, кто ищет власть через трансформацию, борьбу и внутренний огонь.
         <br><br>
-        В древних текстах он предстает как преданный, честный и чрезвычайно воинственный дух, не склонный к хитрости, но способный к абсолютной преданности.
+        В древних текстах он предстаёт как преданный, честный и чрезвычайно воинственный дух, не склонный к хитрости, но способный к абсолютной преданности.
       </p>
     </section>
   </main>
