--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Marchosias — Emissary of Storm</title>
+  <title>Мархосиас</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,23 +12,24 @@
 
   <header>
     <h1>MARCHOSIAS</h1>
-    <p class="subtitle">Emissary of Storm</p>
+    <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона</p>
     <nav>
-      <ul>
-        <li><a href="#">О Нём</a></li>
-        <li><a href="#">Взаимодействие</a></li>
-        <li><a href="#">Алтарь</a></li>
-        <li><a href="#">Контракт</a></li>
-        <li><a href="#">Галерея</a></li>
-      </ul>
-    </nav>
+  <ul>
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="about.html">О Нём</a></li>
+    <li><a href="#">Взаимодействие</a></li>
+    <li><a href="#">Алтарь</a></li>
+    <li><a href="#">Контракт</a></li>
+    <li><a href="#">Галерея</a></li>
+  </ul>
+</nav>
   </header>
 
   <main>
     <section class="intro">
       <p>
         Добро пожаловать в святилище Мархосиаса — демона войны, духа охоты.  
-        Здесь ты найдёшь путь к синхронизации с его флюидом, обряды заключения контракта и секреты вызова.
+        Здесь ты найдёшь путь к синхронизации с его флюидом, заключения контракта и секреты вызова.
       </p>
     </section>
   </main>
