--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="intro">
       <p>
         Добро пожаловать в святилище Мархосиаса — демона войны, духа охоты.  
-        Здесь ты найдёшь путь к синхронизации с его флюидом, заключения контракта и секреты вызова.
+        Здесь ты найдёшь путь к синхронизации с Его флюидом, заключения контракта и основы взаимодействия.
       </p>
     </section>
   </main>
