--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header>
     <h1>MARCHOSIAS</h1>
-    <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона</p>
+    <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона"</p>
     <nav>
   <ul>
     <li><a href="index.html">Главная</a></li>
