--- a/about.html
+++ b/about.html
@@ -14,14 +14,14 @@
     <h1>О Нём</h1>
     <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона"</p>
     <nav>
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="about.html">О Нём</a></li>
-        <li><a href="#">Взаимодействие</a></li>
-        <li><a href="#">Алтарь</a></li>
-        <li><a href="#">Контракт</a></li>
-      </ul>
-    </nav>
+  <ul>
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="about.html">О Нём</a></li>
+    <li><a href="#">Взаимодействие</a></li>
+    <li><a href="#">Алтарь</a></li>
+    <li><a href="#">Контракт</a></li>
+    <li><a href="#">Галерея</a></li>
+  </ul>
   </header>
 
   <main>
