--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <div class="overlay"></div>
 
   <header>
-    <h1>О Нём</h1>
+    <h1>MARCHOSIAS/h1>
     <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона"</p>
     <nav>
   <ul>
@@ -25,6 +25,7 @@
   </header>
 
   <main>
+    <h2>О Нём</h2>
     <section class="intro">
       <p>
         Мархосиас — один из 72-х демонов "Гоэтии", первой книги "Малого Ключа Соломона". Имеет чин Маркиза. Предстаёт в образе огненного волка с грифоньими крыльями и стальным взглядом хищника, но также может являться в обличии оборотня.
