--- a/about.html
+++ b/about.html
@@ -11,28 +11,28 @@
   <div class="overlay"></div>
 
   <header>
-    <h1>MARCHOSIAS/h1>
+    <h1>MARCHOSIAS</h1>
     <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона"</p>
     <nav>
-  <ul>
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="about.html">О Нём</a></li>
-    <li><a href="#">Взаимодействие</a></li>
-    <li><a href="#">Алтарь</a></li>
-    <li><a href="#">Контракт</a></li>
-    <li><a href="#">Галерея</a></li>
-  </ul>
+      <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="about.html">О Нём</a></li>
+        <li><a href="#">Взаимодействие</a></li>
+        <li><a href="#">Алтарь</a></li>
+        <li><a href="#">Контракт</a></li>
+        <li><a href="#">Галерея</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
     <h2>О Нём</h2>
-      <p>
-        Мархосиас — один из 72-х демонов "Гоэтии", первой книги "Малого Ключа Соломона". Имеет чин Маркиза. Предстаёт в образе огненного волка с грифоньими крыльями и стальным взглядом хищника, но также может являться в обличии оборотня.
-        Является покровителем тех, кто ищет власть через трансформацию, борьбу и внутренний огонь.
-        <br><br>
-        В древних текстах он предстаёт как преданный, честный и чрезвычайно воинственный дух, не склонный к хитрости, но способный к абсолютной преданности.
-      </p>
-    </section>
+    <p>
+      Мархосиас — один из 72-х демонов "Гоэтии", первой книги "Малого Ключа Соломона". Имеет чин Маркиза. Предстаёт в образе огненного волка с грифоньими крыльями и стальным взглядом хищника, но также может являться в обличии оборотня.
+      Является покровителем тех, кто ищет власть через трансформацию, борьбу и внутренний огонь.
+      <br><br>
+      В древних текстах он предстаёт как преданный, честный и чрезвычайно воинственный дух, не склонный к хитрости, но способный к абсолютной преданности.
+    </p>
   </main>
 
   <footer>
@@ -41,3 +41,4 @@
 
 </body>
 </html>
+
