--- a/index.html
+++ b/index.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Мархосиас</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Marchosias Temple</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <div class="overlay"></div>
 
   <header>
     <h1>MARCHOSIAS</h1>
     <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона"</p>
     <nav>
-  <ul>
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="about.html">О Нём</a></li>
-    <li><a href="#">Взаимодействие</a></li>
-    <li><a href="#">Алтарь</a></li>
-    <li><a href="#">Контракт</a></li>
-    <li><a href="#">Галерея</a></li>
-  </ul>
-</nav>
+      <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="about.html">О Нём</a></li>
+        <li><a href="#">Взаимодействие</a></li>
+        <li><a href="#">Алтарь</a></li>
+        <li><a href="#">Контракт</a></li>
+        <li><a href="#">Галерея</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
-    <section class="intro">
-      <p>
-        Добро пожаловать в святилище Мархосиаса — демона войны, духа охоты.  
-        Здесь ты найдёшь путь к синхронизации с Его флюидом, заключения контракта и основы взаимодействия.
-      </p>
+    <section>
+      <p>Добро пожаловать в святилище Мархосиаса — демона войны, духа охоты. Здесь ты найдёшь путь к синхронизации с Его флюидом, заключения контракта и основы взаимодействия.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Marchosias Temple. Non Serviam.</p>
+    <p>&copy; 2025 Marchosias Temple</p>
   </footer>
 
 </body>
