--- a/about.html
+++ b/about.html
@@ -3,14 +3,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>О Мархосиасе</title>
+  <title>Marchosias Temple</title>
   <link rel="stylesheet" href="style.css">
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Georgia', serif;
+      background-color: #2b2b2b;
+      color: #ddd;
+      text-align: center;
+    }
+
     canvas {
       position: fixed;
       top: 0;
       left: 0;
       z-index: -1;
+    }
+
+    header {
+      padding-top: 20px;
+    }
+
+    h1 {
+      color: red;
+      font-size: 3em;
+      letter-spacing: 0.2em;
+      margin: 0;
+    }
+
+    .subtitle {
+      font-size: 1em;
+      color: #aaa;
+      margin: 0.5em 0 1em 0;
+      letter-spacing: 0.1em;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 0 0 20px 0;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    footer {
+      margin-top: 40px;
+      font-size: 0.8em;
+      color: #666;
     }
   </style>
 </head>
@@ -36,15 +94,8 @@
 
   <main>
     <section>
-      <h2>О Нём</h2>
       <p>
-        Мархосиас — один из 72 духов Гоэтии, демон четвёртого легиона. Он являет себя в образе огненного волка с грифоньими крыльями, но может принимать и облик воина или зверя. Его натура — противоречие: брутальность и благородство, хаос и дисциплина, уничтожение и защита.
-      </p>
-      <p>
-        Его сила раскрывается в стремлении к внутренней трансформации, разрушении иллюзий, пробуждении зверя в человеке. Он покровитель воинов духа, отверженных, тех, кто идёт по краю между светом и бездной.
-      </p>
-      <p>
-        Его флюид пробуждает чувство огненной решимости, жажду свободы и силу говорить истину сквозь пламя.
+        Добро пожаловать в святилище Мархосиаса — демона войны, духа охоты. Здесь ты найдёшь путь к синхронизации с Его флюидом, заключению контракта и основы взаимодействия.
       </p>
     </section>
   </main>
