--- a/about.html
+++ b/about.html
@@ -23,7 +23,11 @@
     }
 
     header {
-      padding-top: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 40px 0 20px 0;
     }
 
     h1 {
@@ -61,7 +65,7 @@
 
     main {
       max-width: 800px;
-      margin: 0 auto;
+      margin: 40px auto;
       padding: 20px;
     }
 
@@ -80,17 +84,18 @@
   <header>
     <h1>MARCHOSIAS</h1>
     <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона"</p>
-    <nav>
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="about.html">О Нём</a></li>
-        <li><a href="#">Взаимодействие</a></li>
-        <li><a href="#">Алтарь</a></li>
-        <li><a href="#">Контракт</a></li>
-        <li><a href="#">Галерея</a></li>
-      </ul>
-    </nav>
   </header>
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Главная</a></li>
+      <li><a href="about.html">О Нём</a></li>
+      <li><a href="#">Взаимодействие</a></li>
+      <li><a href="#">Алтарь</a></li>
+      <li><a href="#">Контракт</a></li>
+      <li><a href="#">Галерея</a></li>
+    </ul>
+  </nav>
 
   <main>
     <section>
