--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       z-index: -1;
     }
 
-    header {
+    .header-wrapper {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -44,13 +44,19 @@
       letter-spacing: 0.1em;
     }
 
+    nav {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+
     nav ul {
       list-style: none;
       padding: 0;
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin: 0 0 20px 0;
+      margin: 0;
     }
 
     nav ul li a {
@@ -81,10 +87,10 @@
 
   <div class="overlay"></div>
 
-  <header>
+  <div class="header-wrapper">
     <h1>MARCHOSIAS</h1>
     <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона"</p>
-  </header>
+  </div>
 
   <nav>
     <ul>
