--- a/index.html
+++ b/index.html
@@ -6,11 +6,79 @@
   <title>Marchosias Temple</title>
   <link rel="stylesheet" href="style.css">
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Georgia', serif;
+      background-color: #2b2b2b;
+      color: #ddd;
+      text-align: center;
+    }
+
     canvas {
       position: fixed;
       top: 0;
       left: 0;
       z-index: -1;
+    }
+
+    .header-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 40px 0 20px 0;
+    }
+
+    h1 {
+      color: red;
+      font-size: 3em;
+      letter-spacing: 0.2em;
+      margin: 0;
+    }
+
+    .subtitle {
+      font-size: 1em;
+      color: #aaa;
+      margin: 0.5em 0 1em 0;
+      letter-spacing: 0.1em;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 0;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+
+    footer {
+      margin-top: 40px;
+      font-size: 0.8em;
+      color: #666;
     }
   </style>
 </head>
@@ -19,20 +87,21 @@
 
   <div class="overlay"></div>
 
-  <header>
+  <div class="header-wrapper">
     <h1>MARCHOSIAS</h1>
     <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона"</p>
-    <nav>
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="about.html">О Нём</a></li>
-        <li><a href="#">Взаимодействие</a></li>
-        <li><a href="#">Алтарь</a></li>
-        <li><a href="#">Контракт</a></li>
-        <li><a href="#">Галерея</a></li>
-      </ul>
-    </nav>
-  </header>
+  </div>
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Главная</a></li>
+      <li><a href="about.html">О Нём</a></li>
+      <li><a href="#">Взаимодействие</a></li>
+      <li><a href="#">Алтарь</a></li>
+      <li><a href="#">Контракт</a></li>
+      <li><a href="#">Галерея</a></li>
+    </ul>
+  </nav>
 
   <main>
     <section>
