--- a/about.html
+++ b/about.html
@@ -106,7 +106,12 @@
   <main>
     <section>
       <p>
-        Добро пожаловать в святилище Мархосиаса — демона войны, духа охоты. Здесь ты найдёшь путь к синхронизации с Его флюидом, заключению контракта и основы взаимодействия.
+        Мархосиас – один из 72-х Демонов "Гоэтии", первой книги "Малого Ключа Соломона". Имеет ранг Маркиза. Предстаёт в образе огненного волка с грифоньими крыльями и стальным взглядом хищника, но также может являться в обличии оборотня.
+       <p>
+        Является мужским архетипом воина-одиночки с собственной философией и самурайской этикой, а также покровителем тех, кто ищет власть через трансформацию, борьбу и внутренний огонь.
+        <p>
+        В древних текстах он предстаёт как преданный, честный и чрезвычайно воинственный дух, не склонный к хитрости, но способный к абсолютной преданности. 
+       </p> 
       </p>
     </section>
   </main>
