--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <ul>
       <li><a href="index.html">Главная</a></li>
       <li><a href="about.html">О Нём</a></li>
-      <li><a href="#">Взаимодействие</a></li>
+      <li><a href="interaction.html">Взаимодействие</a></li>
       <li><a href="#">Алтарь</a></li>
       <li><a href="#">Контракт</a></li>
       <li><a href="#">Галерея</a></li>
