--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <title>Marchosias Temple</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
       font-family: 'Georgia', serif;
       background-color: #2b2b2b;
       color: #ddd;
       text-align: center;
+      height: 100%;
+      overflow-y: auto;
     }
 
     canvas {
