--- a/interaction.html
+++ b/interaction.html
@@ -3,10 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Взаимодействие с Мархосиасом</title>
+  <title>Marchosias Temple</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Georgia', serif;
+      background-color: #2b2b2b;
+      color: #ddd;
+      text-align: center;
+      height: 100%;
+      overflow-y: auto;
+    }
+
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+
+    .header-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 40px 0 20px 0;
+    }
+
+    h1 {
+      color: red;
+      font-size: 3em;
+      letter-spacing: 0.2em;
+      margin: 0;
+    }
+
+    .subtitle {
+      font-size: 1em;
+      color: #aaa;
+      margin: 0.5em 0 1em 0;
+      letter-spacing: 0.1em;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 0;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+
+    footer {
+      margin-top: 40px;
+      font-size: 0.8em;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
+  <canvas id="background-canvas"></canvas>
+
   <div class="header-wrapper">
     <h1>MARCHOSIAS</h1>
     <p class="subtitle">"Глас воющего пламени. Клинок мятежного легиона"</p>
@@ -25,21 +105,16 @@
 
   <main>
     <section>
-      <p>
+      <h2>Взаимодействие с Мархосиасом</h2>
       <p>Синхронизация с флюидом Мархосиаса начинается с внутреннего зова — желания обрести силу, самодисциплину и охотничью решимость. Это путь одиночки, воина, ищущего не славу, а глубину своего огненного ядра.</p>
-
       <p>Чтобы наладить контакт, тебе потребуется:</p>
-      <ul>
+      <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
         <li><strong>Тишина и концентрация.</strong> Мархосиас не является в хаосе. Он слышит зов через дисциплину и намерение.</li>
         <li><strong>Огненный алтарь.</strong> Свечи, курения, символика волка или грифона. Энергия должна быть суровой, но благородной.</li>
-        <li><strong>Кровь или дыхание.</strong> Его флюид пробуждается через физический отклик. Легкий укол, дыхание над огнём — жест твоей готовности к охоте.</li>
+        <li><strong>Кровь или дыхание.</strong> Его флюид пробуждается через физический отклик. Лёгкий укол, дыхание над огнём — жест твоей готовности к охоте.</li>
         <li><strong>Обращение.</strong> Без лишних украшений. Говори с ним честно, прямо, как воин с командиром.</li>
       </ul>
-
-      <blockquote>
-        <em>"Я зову тебя, Мархосиас, клинок мятежного легиона. Пусть моя воля станет сталью, пусть огонь проложит путь."</em>
-      </blockquote>
-
+      <p><em>"Я зову тебя, Мархосиас, клинок мятежного легиона. Пусть моя воля станет сталью, пусть огонь проложит путь."</em></p>
       <p>Это не просьба, а вызов. И если ты достоин, он ответит. Не сразу — но его энергия войдёт в тебя через сны, импульсы к действию, голос охотника внутри.</p>
     </section>
   </main>
@@ -47,5 +122,57 @@
   <footer>
     <p>&copy; 2025 Marchosias Temple</p>
   </footer>
+
+  <script>
+    const canvas = document.getElementById('background-canvas');
+    const ctx = canvas.getContext('2d');
+
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = Math.max(window.innerHeight, document.body.scrollHeight);
+    }
+
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+
+    const sparks = Array.from({ length: 80 }, () => ({
+      x: Math.random() * canvas.width,
+      y: Math.random() * canvas.height,
+      vx: (Math.random() - 0.5) * 1.5,
+      vy: -Math.random() * 2 - 0.5,
+      size: Math.random() * 2 + 1,
+      alpha: 1.0
+    }));
+
+    function drawSparks() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (let spark of sparks) {
+        ctx.beginPath();
+        ctx.arc(spark.x, spark.y, spark.size, 0, Math.PI * 2);
+        ctx.fillStyle = `rgba(255, ${Math.floor(Math.random()*150 + 100)}, 0, ${spark.alpha})`;
+        ctx.fill();
+
+        spark.x += spark.vx;
+        spark.y += spark.vy;
+        spark.alpha -= 0.008;
+
+        if (spark.alpha <= 0 || spark.y < 0 || spark.x < 0 || spark.x > canvas.width) {
+          spark.x = Math.random() * canvas.width;
+          spark.y = canvas.height;
+          spark.vx = (Math.random() - 0.5) * 1.5;
+          spark.vy = -Math.random() * 2 - 0.5;
+          spark.size = Math.random() * 2 + 1;
+          spark.alpha = 1.0;
+        }
+      }
+    }
+
+    function animate() {
+      drawSparks();
+      requestAnimationFrame(animate);
+    }
+
+    animate();
+  </script>
 </body>
 </html>
