--- a/index.html
+++ b/index.html
@@ -106,11 +106,7 @@
   <main>
     <section>
       <p>
-        Мархосиас – один из 72-х Демонов "Гоэтии", первой книги "Малого Ключа Соломона". Имеет ранг Маркиза. Предстаёт в образе огненного волка с грифоньими крыльями и стальным взглядом хищника, но также может являться в обличии оборотня.
-       <p>
-        Является мужским архетипом воина-одиночки с собственной философией и самурайской этикой, а также покровителем тех, кто ищет власть через трансформацию, борьбу и внутренний огонь.
-        <p>
-        В древних текстах он предстаёт как преданный, честный и чрезвычайно воинственный дух, не склонный к хитрости, но способный к абсолютной преданности. 
+        Добро пожаловать в святилище Мархосиаса – демона стратегической войны и охоты. Здесь ты найдёшь путь к синхронизации с Его флюидом, основам взаимодействия и заключению контракта с Ним.
        </p> 
       </p>
     </section>
