--- a/interaction.html
+++ b/interaction.html
@@ -106,11 +106,9 @@
   <main>
     <section>
       <p>
-        Мархосиас – один из 72-х Демонов "Гоэтии", первой книги "Малого Ключа Соломона". Имеет ранг Маркиза. Предстаёт в образе огненного волка с грифоньими крыльями и стальным взглядом хищника, но также может являться в обличии оборотня.
-       <p>
-        Является мужским архетипом воина-одиночки с собственной философией и самурайской этикой, а также покровителем тех, кто ищет власть через трансформацию, борьбу и внутренний огонь.
-        <p>
-        В древних текстах он предстаёт как преданный, честный и чрезвычайно воинственный дух, не склонный к хитрости, но способный к абсолютной преданности. 
+        Прежде чем начать взаимодействие с Мархосиасом, стоит убедиться в том, а подходит ли оно Вам, поскольку основные планетарные аспекты Мархосиаса это Марс и Луна.
+      <p>
+        Соответственно, человеку желательно иметь достаточно развитые аспекты Марса и Луны, иначе пропускная способность флюида будет хромать.
        </p> 
       </p>
     </section>
