--- a/interaction.html
+++ b/interaction.html
@@ -105,9 +105,8 @@
 
   <main>
     <section>
-      <p,
-      Прежде чем начать взаимодействие с Мархосиасом, стоит убедиться в том, а подходит ли оно Вам, поскольку основные планетарные аспекты Мархосиаса это Марс и Луна.
-      </p>
+      <h2>Добро пожаловать</h2>
+      <p>Добро пожаловать в святилище Мархосиаса — демона войны, духа охоты. Здесь ты найдёшь путь к синхронизации с Его флюидом, заключению контракта и основы взаимодействия.</p>
     </section>
   </main>
 
