--- a/interaction.html
+++ b/interaction.html
@@ -214,7 +214,8 @@
   <main>
     <section>
       <p>
-      <p>Добро пожаловать в святилище Мархосиаса — демона войны, духа охоты. Здесь ты найдёшь путь к синхронизации с Его флюидом, заключению контракта и основы взаимодействия.</p>
+      Добро пожаловать в святилище Мархосиаса — демона войны, духа охоты. Здесь ты найдёшь путь к синхронизации с Его флюидом, заключению контракта и основы взаимодействия.
+      </p>
     </section>
   </main>
 
