--- a/interaction.html
+++ b/interaction.html
@@ -214,7 +214,9 @@
   <main>
     <section>
       <p>
-      Добро пожаловать в святилище Мархосиаса — демона войны, духа охоты. Здесь ты найдёшь путь к синхронизации с Его флюидом, заключению контракта и основы взаимодействия.
+      Прежде чем начать взаимодействие с Мархосиасом, стоит убедиться в том, а подходит ли оно Вам, поскольку основные планетарные аспекты Мархосиаса это Марс и Луна.
+      <p>
+      Соответственно, человеку желательно иметь достаточно развитые аспекты Марса и Луны, иначе пропускная способность флюида будет хромать.
       </p>
     </section>
   </main>
