--- a/interaction.html
+++ b/interaction.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Marchosias Temple</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <style>
     html, body {
       margin: 0;
@@ -105,7 +105,7 @@
 
   <main>
     <section>
-      <p>Прежде чем начать взаимодействие с Мархосиасом, стоит убедиться в том, а подходит ли оно Вам, поскольку основные планетарные аспекты Мархосиаса это Марс и Луна.</p>
+      <p>Прежде чем начать взаимодействие с Мархосиасом, стоит убедиться в том, а подходит ли оно Вам, поскольку основные планетарные аспекты Мархосиаса — это Марс и Луна.</p>
       <p>Соответственно, человеку желательно иметь достаточно развитые аспекты Марса и Луны, иначе пропускная способность флюида будет хромать.</p>
     </section>
   </main>
@@ -167,3 +167,4 @@
   </script>
 </body>
 </html>
+
