--- a/interaction.html
+++ b/interaction.html
@@ -105,10 +105,8 @@
 
   <main>
     <section>
-      <p>
-        Добро пожаловать в святилище Мархосиаса – демона стратегической войны и охоты. Здесь ты найдёшь путь к синхронизации с Его флюидом, основам взаимодействия и заключению контракта с Ним.
-       </p> 
-      </p>
+      <p>Прежде чем начать взаимодействие с Мархосиасом, стоит убедиться в том, а подходит ли оно Вам, поскольку основные планетарные аспекты Мархосиаса — это Марс и Луна.</p>
+      <p>Соответственно, человеку желательно иметь достаточно развитые аспекты Марса и Луны, иначе пропускная способность флюида будет хромать.</p>
     </section>
   </main>
 
